--- a/AndroidMetamodel.edit/plugin.xml
+++ b/AndroidMetamodel.edit/plugin.xml
@@ -7,10 +7,10 @@
 <plugin>
 
    <extension point="org.eclipse.emf.edit.itemProviderAdapterFactories">
-      <!-- @generated Android -->
+      <!-- @generated MAndroid -->
       <factory
-            uri="Android"
-            class="Android.provider.AndroidItemProviderAdapterFactory"
+            uri="http://mandroid/1.0"
+            class="mandroid.provider.MandroidItemProviderAdapterFactory"
             supportedTypes=
               "org.eclipse.emf.edit.provider.IEditingDomainItemProvider
                org.eclipse.emf.edit.provider.IStructuredItemContentProvider
