--- a/AndroidMetamodel.edit/plugin.xml
+++ b/AndroidMetamodel.edit/plugin.xml
@@ -7,6 +7,19 @@
 <plugin>
 
    <extension point="org.eclipse.emf.edit.itemProviderAdapterFactories">
+      <!-- @generated Android -->
+      <factory
+            uri="Android"
+            class="Android.provider.AndroidItemProviderAdapterFactory"
+            supportedTypes=
+              "org.eclipse.emf.edit.provider.IEditingDomainItemProvider
+               org.eclipse.emf.edit.provider.IStructuredItemContentProvider
+               org.eclipse.emf.edit.provider.ITreeItemContentProvider
+               org.eclipse.emf.edit.provider.IItemLabelProvider
+               org.eclipse.emf.edit.provider.IItemPropertySource"/>
+   </extension>
+
+   <extension point="org.eclipse.emf.edit.itemProviderAdapterFactories">
       <!-- @generated MAndroid -->
       <factory
             uri="http://mandroid/1.0"
