--- a/AndroidMetamodel.editor/plugin.properties
+++ b/AndroidMetamodel.editor/plugin.properties
@@ -1,9 +1,9 @@
 #
 
-pluginName = MAndroid Editor
+pluginName = Android Editor
 providerName = www.example.org
 
-_UI_MandroidEditor_menu = &Mandroid Editor
+_UI_AndroidEditor_menu = &Android Editor
 
 _UI_CreateChild_menu_item = &New Child
 _UI_CreateSibling_menu_item = N&ew Sibling
@@ -30,13 +30,13 @@ _UI_Wizard_category = Example EMF Model Creation Wizards
 
 _UI_CreateModelError_message = Problems encountered in file "{0}"
 
-_UI_MandroidModelWizard_label = Mandroid Model
-_UI_MandroidModelWizard_description = Create a new Mandroid model
+_UI_AndroidModelWizard_label = Android Model
+_UI_AndroidModelWizard_description = Create a new Android model
 
-_UI_MandroidEditor_label = Mandroid Model Editor
+_UI_AndroidEditor_label = Android Model Editor
 
-_UI_MandroidEditorFilenameDefaultBase = My
-_UI_MandroidEditorFilenameExtensions = mandroid
+_UI_AndroidEditorFilenameDefaultBase = My
+_UI_AndroidEditorFilenameExtensions = android
 
 _UI_Wizard_label = New
 
@@ -51,3 +51,10 @@ _UI_Wizard_initial_object_description = Select a model object to create
 _UI_FileConflict_label = File Conflict
 _WARN_FileConflict = There are unsaved changes that conflict with changes made outside the editor.  Do you wish to discard this editor's changes?
 
+_UI_MandroidEditor_menu = &Mandroid Editor
+_UI_MandroidModelWizard_label = Mandroid Model
+_UI_MandroidModelWizard_description = Create a new Mandroid model
+_UI_MandroidEditor_label = Mandroid Model Editor
+_UI_MandroidEditorFilenameDefaultBase = My
+_UI_MandroidEditorFilenameExtensions = mandroid
+
