Redibujado del metamodelo

--- a/AndroidMetamodel/.settings/org.eclipse.core.resources.prefs
+++ b/AndroidMetamodel/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
+encoding//model/Android.ecore=UTF-8
+encoding//model/Android.ecorediag=UTF-8
 encoding//model/MAndroid.ecore=UTF-8
 encoding//model/MAndroid.ecorediag=UTF-8
