Arreglados Strings. Regenerados plugins

--- a/AndroidGenerator/src-gen/.project
+++ b/AndroidGenerator/src-gen/.project
@@ -1,7 +1,6 @@
-
 <?xml version="1.0" encoding="utf-8"?>
 <projectDescription>
-	<name>MetaAndroid</name>
+	<name>SuperApp_project</name>
     <comment></comment>
 	<projects>
 	</projects>
@@ -32,5 +31,3 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
 </projectDescription>
-
-	
