--- a/AndroidMetamodel.edit/plugin.properties
+++ b/AndroidMetamodel.edit/plugin.properties
@@ -1,6 +1,6 @@
 #
 
-pluginName = MAndroid Edit Support
+pluginName = Android Edit Support
 providerName = www.example.org
 
 _UI_CreateChild_text = {0}
@@ -12,33 +12,33 @@ _UI_CreateSibling_description = Create a new sibling of type {0} for the selecte
 
 _UI_PropertyDescriptor_description = The {0} of the {1}
 
-_UI_Activity_type = Activity
-_UI_Widget_type = Widget
 _UI_Layout_type = Layout
+_UI_Widget_type = Widget
 _UI_Button_type = Button
+_UI_TextField_type = Text Field
 _UI_TextView_type = Text View
 _UI_Aplication_type = Aplication
-_UI_TextField_type = Text Field
+_UI_CreateString_type = Create String
+_UI_Activity_type = Activity
+_UI_Menu_type = Menu
+_UI_Item_type = Item
 _UI_Action_type = Action
 _UI_Dialog_type = Dialog
 _UI_Unknown_type = Object
 
 _UI_Unknown_datatype= Value
 
-_UI_Activity_name_feature = Name
-_UI_Activity_package_feature = Package
-_UI_Activity_runsIn_feature = Runs In
-_UI_Activity_main_feature = Main
-_UI_Activity_muestra_feature = Muestra
-_UI_Widget_name_feature = Name
-_UI_Widget_id_feature = Id
-_UI_Widget_text_feature = Text
-_UI_Widget_layoutOwner_feature = Layout Owner
+_UI_Layout_name_feature = Name
 _UI_Layout_type_feature = Type
 _UI_Layout_contains_feature = Contains
 _UI_Layout_layOn_feature = Lay On
 _UI_Layout_esMostrado_feature = Es Mostrado
+_UI_Widget_name_feature = Name
+_UI_Widget_text_feature = Text
+_UI_Widget_id_feature = Id
+_UI_Widget_layoutOwner_feature = Layout Owner
 _UI_Button_triggers_feature = Triggers
+_UI_TextField_input_feature = Input
 _UI_Aplication_name_feature = Name
 _UI_Aplication_package_feature = Package
 _UI_Aplication_minSDK_feature = Min SDK
@@ -46,60 +46,47 @@ _UI_Aplication_targetSDK_feature = Target SDK
 _UI_Aplication_versionCode_feature = Version Code
 _UI_Aplication_versionName_feature = Version Name
 _UI_Aplication_permissions_feature = Permissions
-_UI_Aplication_run_feature = Run
 _UI_Aplication_contains_feature = Contains
-_UI_Action_shows_feature = Shows
-_UI_Action_buttonOwner_feature = Button Owner
-_UI_Dialog_actionOwner_feature = Action Owner
-_UI_Dialog_time_feature = Time
-_UI_Dialog_text_feature = Text
-_UI_Unknown_feature = Unspecified
-
-_UI_Permissions_INTERNET_literal = INTERNET
-_UI_Permissions_FINE_LOCATION_literal = FINE_LOCATION
-_UI_Permissions_COARSE_LOCATION_literal = COARSE_LOCATION
-_UI_LayoutType_VERTICAL_literal = VERTICAL
-_UI_LayoutType_LAND_literal = LAND
-_UI_Length_LONG_literal = LONG
-_UI_Length_SHORT_literal = SHORT
-_UI_Strings_type = Strings
-_UI_Menu_type = Menu
-_UI_Item_type = Item
-_UI_Activity_show_feature = Show
-_UI_Aplication_hasStrings_feature = Has Strings
-_UI_TextField_input_feature = Input
-_UI_Action_type_feature = Type
-_UI_Strings_name_feature = Name
-_UI_Strings_value_feature = Value
-_UI_Menu_id_feature = Id
-_UI_Menu_hasItem_feature = Has Item
-_UI_Item_id_feature = Id
-_UI_Item_showAsAction_feature = Show As Action
-_UI_Item_order_feature = Order
-_UI_Item_title_feature = Title
-_UI_TypeAction_Always_literal = Always
-_UI_TypeAction_Never_literal = Never
-_UI_TypeAction_IfRoom_literal = IfRoom
-_UI_InputType_Password_literal = Password
-_UI_InputType_Number_literal = Number
-_UI_InputType_TExt_literal = TExt
-_UI_ActionType_Click_literal = Click
-_UI_ActionType_LongClick_literal = LongClick
-_UI_CreateString_type = Create String
-_UI_Layout_name_feature = Name
 _UI_Aplication_creates_feature = Creates
+_UI_Aplication_run_feature = Run
 _UI_CreateString_stored_feature = Stored
 _UI_CreateString_name_feature = Name
 _UI_CreateString_value_feature = Value
+_UI_Activity_name_feature = Name
+_UI_Activity_package_feature = Package
+_UI_Activity_main_feature = Main
+_UI_Activity_show_feature = Show
+_UI_Activity_runsIn_feature = Runs In
+_UI_Activity_muestra_feature = Muestra
+_UI_Menu_id_feature = Id
 _UI_Menu_isShowed_feature = Is Showed
+_UI_Menu_hasItem_feature = Has Item
 _UI_Item_tittle_feature = Tittle
+_UI_Item_order_feature = Order
+_UI_Item_showAsAction_feature = Show As Action
+_UI_Item_id_feature = Id
 _UI_Item_menuOwner_feature = Menu Owner
+_UI_Action_type_feature = Type
+_UI_Action_buttonOwner_feature = Button Owner
+_UI_Action_shows_feature = Shows
+_UI_Dialog_time_feature = Time
+_UI_Dialog_text_feature = Text
+_UI_Dialog_actionOwner_feature = Action Owner
+_UI_Unknown_feature = Unspecified
+
+_UI_LayoutType_VERTICAL_literal = VERTICAL
+_UI_LayoutType_LAND_literal = LAND
 _UI_InputType_PASSWORD_literal = PASSWORD
 _UI_InputType_NUMERIC_literal = NUMERIC
 _UI_InputType_TEXT_literal = TEXT
 _UI_InputType_DATE_literal = DATE
 _UI_ActionType_CLICK_literal = CLICK
 _UI_ActionType_LONGCLICK_literal = LONGCLICK
+_UI_Length_LONG_literal = LONG
+_UI_Length_SHORT_literal = SHORT
+_UI_Permissions_INTERNET_literal = INTERNET
+_UI_Permissions_FINE_LOCATION_literal = FINE_LOCATION
+_UI_Permissions_COARSE_LOCATION_literal = COARSE_LOCATION
 _UI_Permissions_CAMERA_literal = CAMERA
 _UI_Permissions_READ_SMS_literal = READ_SMS
 _UI_TypeAction_ALWAYS_literal = ALWAYS
