--- a/AndroidGenerator/.settings/org.eclipse.core.resources.prefs
+++ b/AndroidGenerator/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
 eclipse.preferences.version=1
-encoding//src/default.android=UTF-8
-encoding//src/default.android_diagram=UTF-8
+encoding//src/BuscaPiso.android=UTF-8
+encoding//src/BuscaPiso.android_diagram=UTF-8
 encoding/<project>=ISO-8859-1
